--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -2,4 +2,6 @@
 @import 'variables';
 
 // component imports
-@import '/landing/landing';
+@import 'landing/landing';
+@import 'header/header';
+@import 'footer/footer';
