added contact omponent

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -5,4 +5,6 @@
 @import 'landing/landing';
 @import 'header/header';
 @import 'footer/footer';
+@import 'about/about';
 @import 'utils/banner';
+@import 'utils/contactme';
