--- a/client/src/components/_variables.scss
+++ b/client/src/components/_variables.scss
@@ -6,6 +6,9 @@ $g_yellow: #ffdf3b;
 $g_white: #ffffff;
 $g_cream_color: #fafafa;
 
+.h_divider{
+  border-bottom: solid;
+}
 
 // Themes css
 // nav, .page-footer {
