--- a/client/src/components/_variables.scss
+++ b/client/src/components/_variables.scss
@@ -15,6 +15,16 @@ $g_cream_color: #fafafa;
 //   background: #757575;
 // }
 
+#contact_me, #banner{
+  background-color: #ee6e73;
+}
+
+.color_container{
+  color: $g_white;
+  height: 100%;
+  background-color: rgba(51,51,51,0.08);
+}
+
 
 // mixing & @medias
 @mixin small() {
