--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -6,5 +6,6 @@
 @import 'header/header';
 @import 'footer/footer';
 @import 'about/about';
+@import 'slider/slider';
 @import 'utils/banner';
 @import 'utils/contactme';
